# Bomber

./: .gitignore  CMakeLists.txt  Client.xml  Define.h  README.md  Server_arcitecture.xml  Struct.h  Thumbs.db  Untitled Diagram.xml  client_example.cc  define.cc  design  fieldConf  map1.mp  server_example.cc  struct.cc  text.t
Architecture/: Client.xml  Server.xml  Server_architecture.xml
Client/: SignalsSlots.txt  appthread.h  bomber.pro  bombergame.cpp  bombergame.h  gamewidgetui.ui  main.cpp  menuwidgetui.ui  qgameres.qrc  resources.qrc
Client/connection/build-client-Desktop-Debug/: Makefile  client  moc_Client.cpp  moc_Game.cpp  moc_Parse.cpp
Client/connection/client/: Client.cc  Client.h  Game.cpp  Game.h  Header.h  Parse.h  Parser.h  (+6 more)
Client/game/: actionwidget.cpp  actionwidget.h  gameWidget.cpp  gameWidget.h  view.cpp  view.h
Client/images/: Thumbs.db
Client/menu/: menuWidget.cpp  menuWidget.h
Client/resources/: Thumbs.db
Design/: Thumbs.db
Server/: Block.cc  Block.h  Bomb.cc  Bomb.h  Field.cc  Field.h  Game.cc  Game.h  Game_d.cc  Game_d.h  Object.cc  Object.h  Player.cc  Player.h  ResolveManager.cc  ResolveManager.h  Server.h  ServerFuncs.h  a.out  game.h  server.cc  server.h
build-bomber-Desktop-Debug/: Makefile  moc_Client.cpp  moc_Game.cpp  moc_bombactor.cpp  moc_bombergame.cpp  moc_gameWidget.cpp  moc_graphicsactor.cpp  moc_view.cpp  ui_menuwidgetui.h
build-bomber-Desktop-Release/: Makefile  moc_animatedgraphicsitem.cpp  moc_bombactor.cpp  moc_boxwidget.cpp  moc_graphicsactor.cpp  moc_menuWidget.cpp  ui_gamewidgetui.h
images/: readme.md
(+10 files in other folders)
